feat: refactor user model to use enum roles and split name into first and last name with full CRUD support